# lyricist

./: .gitignore  README.md  pyproject.toml
lyricist/: __init__.py  __main__.py
