[project]
name = "lyricist"
version = "0.1.0"
description = ""
authors = [
    {name = "fluffy",email = "fluffy@beesbuzz.biz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper (>=20250625,<20250626)",
    "demucs (>=4.0.1,<5.0.0)",
    "mutagen (>=1.47.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
pylint = "^3.3.7"

